--- a/Savio/SAOfferList/SAOfferListTableViewCell.xib
+++ b/Savio/SAOfferList/SAOfferListTableViewCell.xib
@@ -6,10 +6,8 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <mutableArray key="GothamRounded-Light.otf">
-            <string>GothamRounded-Light</string>
-        </mutableArray>
         <mutableArray key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
             <string>GothamRounded-Medium</string>
             <string>GothamRounded-Medium</string>
         </mutableArray>
@@ -31,7 +29,7 @@
                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="XmZ-h8-1JZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="198"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="682-Zc-T1z">
+                            <imageView userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="682-Zc-T1z">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="198"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QTa-4M-Tgh">
@@ -52,7 +50,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="51z-fE-Jhd"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
+                                        <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="10"/>
                                         <color key="textColor" red="0.62352941176470589" green="0.88627450980392153" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -71,7 +69,7 @@
                                             <constraint firstAttribute="height" constant="30" id="3he-9Z-MZD"/>
                                             <constraint firstAttribute="width" constant="186" id="PP2-VP-b1G"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="10"/>
+                                        <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="10"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -135,7 +133,7 @@
                                         <integer key="NSUnderline" value="1"/>
                                     </attributes>
                                 </fragment>
-                                <fragment content="V">
+                                <fragment content="v">
                                     <attributes>
                                         <color key="NSColor" red="0.56470588235294117" green="0.87058823529411766" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
                                         <font key="NSFont" size="14" name="GothamRounded-Book"/>
