Share extension changes

--- a/Savio/PhoneNumberViewController/SAEnterPhoneNumberViewController.xib
+++ b/Savio/PhoneNumberViewController/SAEnterPhoneNumberViewController.xib
@@ -61,7 +61,7 @@
                         <constraint firstAttribute="width" constant="277" id="rpB-H4-XFw"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NtN-3h-DrQ">
