--- a/Savio/SACreateSavingPlanViewController/SavingPageView.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingPageView.xib
@@ -25,7 +25,7 @@
                 <view tag="2" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="SYK-zo-4rC">
                     <rect key="frame" x="60" y="35" width="480" height="525"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU HAVE NO ITEMES IN YOUR WISHLIST. ADD THE THINGS YOU WANT TO SAVE UP FOR USING OUR BROWSER BOOKMARKLETS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="daa-Wh-3j0">
+                        <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU HAVE NO ITEMS IN YOUR WISHLIST. ADD THE THINGS YOU WANT TO SAVE UP FOR USING OUR BROWSER BOOKMARKLETS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="daa-Wh-3j0">
                             <rect key="frame" x="30" y="221" width="420" height="83"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="83" id="1ty-eO-pIh"/>
