delete functionality from wishlist

--- a/Savio/WishListViewController/SAWishListViewController.xib
+++ b/Savio/WishListViewController/SAWishListViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAWishListViewController" customModule="Savio" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="wishListTable" destination="Sfe-Vn-4cP" id="cP2-Bx-F48"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
