--- a/Savio/SavingPlanSetup/SAPopOverViewController.xib
+++ b/Savio/SavingPlanSetup/SAPopOverViewController.xib
@@ -20,6 +20,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="60" height="90"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="separatorColor" red="0.25490196079999999" green="0.25490196079999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="g41-B0-bIa"/>
                         <outlet property="delegate" destination="-1" id="eAC-zV-swX"/>
