--- a/Savio/HurrayViewController/HurreyViewController.xib
+++ b/Savio/HurrayViewController/HurreyViewController.xib
@@ -27,15 +27,15 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="YAh-VO-ioi">
-                    <rect key="frame" x="258" y="25" width="85" height="85"/>
+                    <rect key="frame" x="281" y="25" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="YAh-VO-ioi" secondAttribute="height" multiplier="1:1" id="P84-YQ-gMy"/>
-                        <constraint firstAttribute="width" constant="85" id="TYF-BH-pEH"/>
-                        <constraint firstAttribute="height" constant="85" id="ogg-N5-oSy"/>
+                        <constraint firstAttribute="width" constant="40" id="TYF-BH-pEH"/>
+                        <constraint firstAttribute="height" constant="40" id="ogg-N5-oSy"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hooray,                    you're all set up" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srb-ZI-X44">
-                    <rect key="frame" x="168" y="119" width="264" height="73"/>
+                    <rect key="frame" x="168" y="74" width="264" height="73"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="264" id="NHZ-a2-m0f"/>
                         <constraint firstAttribute="width" secondItem="srb-ZI-X44" secondAttribute="height" multiplier="246:73" constant="18" id="RYl-Dh-IqS"/>
@@ -45,7 +45,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Let's go create a new saving plan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kl4-Vf-3Td">
-                    <rect key="frame" x="158" y="213" width="283" height="21"/>
+                    <rect key="frame" x="158" y="168" width="283" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="Dv6-SE-Zr0"/>
                         <constraint firstAttribute="width" secondItem="Kl4-Vf-3Td" secondAttribute="height" multiplier="283:21" id="OOc-Mw-EH0"/>
@@ -76,7 +76,7 @@
             <constraints>
                 <constraint firstItem="Kl4-Vf-3Td" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FmF-QL-WjY"/>
                 <constraint firstItem="xEm-qu-yo9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="HJl-M2-443"/>
-                <constraint firstItem="YAh-VO-ioi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Pg4-hT-2tT"/>
+                <constraint firstItem="YAh-VO-ioi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="1" id="Pg4-hT-2tT"/>
                 <constraint firstAttribute="trailing" secondItem="xEm-qu-yo9" secondAttribute="trailing" constant="30" id="aNu-xR-TqH"/>
                 <constraint firstItem="srb-ZI-X44" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cMg-GF-vpM"/>
                 <constraint firstItem="Kl4-Vf-3Td" firstAttribute="top" secondItem="srb-ZI-X44" secondAttribute="bottom" constant="21" id="ezv-lJ-c68"/>
