--- a/Savio/SavingPlanSetup/SASavingPlanViewController.xib
+++ b/Savio/SavingPlanSetup/SASavingPlanViewController.xib
@@ -38,7 +38,7 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ohz-oo-qwT">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ohz-oo-qwT">
                             <rect key="frame" x="0.0" y="0.0" width="600" height="192"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="192" id="8FF-v9-xD8"/>
