--- a/Savio/SACreateSavingPlanViewController/SACreateSavingPlanViewController.xib
+++ b/Savio/SACreateSavingPlanViewController/SACreateSavingPlanViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -20,6 +20,7 @@
                 <outlet property="suggestedHt" destination="DT8-ue-i3F" id="CJW-n5-0uD"/>
                 <outlet property="suggestedTop" destination="Nge-xE-NSP" id="OJf-cI-Uae"/>
                 <outlet property="suggestedY" destination="X7i-At-qGV" id="mJ0-g4-Ktb"/>
+                <outlet property="tblView" destination="xhW-M7-wm6" id="TZk-Hn-kVb"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
